--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -24,9 +24,9 @@
         <!-- Navigation (header)-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="">Inicio</a>
-                <a class="navbar-brand" href="">Modelos</a>
-                <a class="navbar-brand" href="">Sobre mi</a>
+                <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'lista_modelos' %}">Modelos</a>
+                <a class="navbar-brand" href="{% url 'about' %}">Sobre mi</a>
                 <a class="btn btn-primary" href="#signup">INICIAR</a>
             </div>
         </nav>
