--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -26,6 +26,7 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'lista_modelos' %}">Modelos</a>
+                <a class="navbar-brand" href="{% url 'lista_modelos' %}">Planes de pago</a>
                 <a class="navbar-brand" href="{% url 'about' %}">Sobre mi</a>
                 <a class="btn btn-primary" href="#signup">INICIAR</a>
             </div>
