--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -28,7 +28,7 @@
                 <a class="navbar-brand" href="{% url 'lista_modelos' %}">Modelos</a>
                 <a class="navbar-brand" href="{% url 'lista_modelos' %}">Planes de pago</a>
                 <a class="navbar-brand" href="{% url 'about' %}">Sobre mi</a>
-                <a class="btn btn-primary" href="{% url 'registro' %}">INICIAR</a>
+                <a class="btn btn-primary" href="{% url 'login' %}">INICIAR</a>
             </div>
         </nav>
 
