--- a/templates_base/base.html
+++ b/templates_base/base.html
@@ -26,9 +26,13 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'lista_modelos' %}">Modelos</a>
-                <a class="navbar-brand" href="{% url 'lista_modelos' %}">Planes de pago</a>
+                <a class="navbar-brand" href="{% url 'pagos' %}">Planes de pago</a>
                 <a class="navbar-brand" href="{% url 'about' %}">Sobre mi</a>
-                <a class="btn btn-primary" href="{% url 'login' %}">INICIAR</a>
+                {% if user.is_authenticated %}
+                <a class="btn btn-warning" href="{% url 'logout' %}">Cierre sesión</a>
+                {% else %}
+                <a class="btn btn-primary" href="{% url 'login' %}">Inicio sesión</a>
+                {% endif %}
             </div>
         </nav>
 
