Añadiendo mejoras al nav

--- a/templates_base/inicio.html
+++ b/templates_base/inicio.html
@@ -6,6 +6,6 @@
 
 
 {% block contenido %}
-<h1>Bienvenido/a {{ user.username }} a Rodados MDQ</h1>
+<h1>Bienvenido/a {{ user.first_name }} a Rodados MDQ</h1>
 {% endblock contenido %}
 
