--- a/templates_base/inicio.html
+++ b/templates_base/inicio.html
@@ -6,6 +6,12 @@
 
 
 {% block contenido %}
-<h1>Bienvenido/a {{ user.first_name }} a Rodados MDQ</h1>
+{% if user.is_authenticated %}
+<h1>Bienvenido/a {{ user.last_name }}, {{ user.first_name }}</h1>
+<div>
+  <img src="{{ user.avatar.imagen.url }}" style="max-width: 300px;">
+</div>
+{% else %}
+<h1>Bienvenido/a visitante</h1>
+{% endif %}
 {% endblock contenido %}
-
